// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments-in-type-annotation.js [babel-flow] format 1`] = `
"Unexpected token (1:24)
> 1 | type A = () => infer R extends/* comment */ string
    |                        ^
  2 |
Cause: Unexpected token (1:23)"
`;

exports[`comments-in-type-annotation.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type A = () => infer R extends/* comment */ string

=====================================output=====================================
type A = () => infer R extends /* comment */ string;

================================================================================
`;

exports[`conditional-types.js [babel-flow] format 1`] = `
"Unexpected token (3:33)
  1 | // @flow
  2 |
> 3 | export type DeepReadonly<T> = T extends any[] ? DeepReadonlyArray<T[number]> : T extends object ? DeepReadonlyObject<T> : T;
    |                                 ^
  4 |
  5 | interface DeepReadonlyArray<T> extends ReadonlyArray<DeepReadonly<T>> {}
  6 |
Cause: Unexpected token (3:32)"
`;

exports[`conditional-types.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export type DeepReadonly<T> = T extends any[] ? DeepReadonlyArray<T[number]> : T extends object ? DeepReadonlyObject<T> : T;

interface DeepReadonlyArray<T> extends ReadonlyArray<DeepReadonly<T>> {}

type TypeName<T> =
  T extends string ? "string" :
  T extends number ? "number" :
  T extends boolean ? "boolean" :
  T extends undefined ? "undefined" :
  T extends Function ? "function" :
  "object";

type Type01 = 0 extends (1 extends 2  ? 3 : 4) ? 5 : 6;
type Type02 = 0 extends ((1 extends 2  ? 3 : 4)) ? 5 : 6;
type Type03 = 0 extends (((1 extends 2  ? 3 : 4))) ? 5 : 6;
type Type04 = 0 extends ((((1 extends 2  ? 3 : 4)))) ? 5 : 6;
type Type05 = (0 extends 1 ? 2 : 3) extends 4 ? 5 : 6;
type Type06 = ((0 extends 1 ? 2 : 3)) extends 4 ? 5 : 6;
type Type07 = (((0 extends 1 ? 2 : 3))) extends 4 ? 5 : 6;
type Type08 = ((((0 extends 1 ? 2 : 3)))) extends 4 ? 5 : 6;

type T1 = () => void extends T ? U : V;
type T1a = () => (void extends T ? U : V);
type T1b = () => (void) extends T ? U : V;
type T2 = (() => void) extends T ? U : V;

=====================================output=====================================
// @flow

export type DeepReadonly<T> = T extends any[]
  ? DeepReadonlyArray<T[number]>
  : T extends object
    ? DeepReadonlyObject<T>
    : T;

interface DeepReadonlyArray<T> extends ReadonlyArray<DeepReadonly<T>> {}

type TypeName<T> = T extends string
  ? "string"
  : T extends number
    ? "number"
    : T extends boolean
      ? "boolean"
      : T extends undefined
        ? "undefined"
        : T extends Function
          ? "function"
          : "object";

type Type01 = 0 extends (1 extends 2 ? 3 : 4) ? 5 : 6;
type Type02 = 0 extends (1 extends 2 ? 3 : 4) ? 5 : 6;
type Type03 = 0 extends (1 extends 2 ? 3 : 4) ? 5 : 6;
type Type04 = 0 extends (1 extends 2 ? 3 : 4) ? 5 : 6;
type Type05 = (0 extends 1 ? 2 : 3) extends 4 ? 5 : 6;
type Type06 = (0 extends 1 ? 2 : 3) extends 4 ? 5 : 6;
type Type07 = (0 extends 1 ? 2 : 3) extends 4 ? 5 : 6;
type Type08 = (0 extends 1 ? 2 : 3) extends 4 ? 5 : 6;

type T1 = () => void extends T ? U : V;
type T1a = () => void extends T ? U : V;
type T1b = () => void extends T ? U : V;
type T2 = (() => void) extends T ? U : V;

================================================================================
`;

exports[`cursor.js [babel-flow] format 1`] = `
"Unexpected token (1:24)
> 1 | type A = () => infer R extends string
    |                        ^
  2 |
Cause: Unexpected token (1:23)"
`;

exports[`cursor.js format 1`] = `
====================================options=====================================
cursorOffset: 31
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type A = () => infer R extends <|>string

=====================================output=====================================
type A = () => infer R extends <|>string;

================================================================================
`;

exports[`infer-type.js [babel-flow] format 1`] = `
"Unexpected token, expected "," (3:23)
  1 | // @flow
  2 |
> 3 | type TestReturnType<T extends (...args: any[]) => any> = T extends (...args: any[]) => infer R ? R : any;
    |                       ^
  4 |
  5 | type Unpacked<T> =
  6 |   T extends (infer U)[] ? U :
Cause: Unexpected token, expected "," (3:22)"
`;

exports[`infer-type.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

type TestReturnType<T extends (...args: any[]) => any> = T extends (...args: any[]) => infer R ? R : any;

type Unpacked<T> =
  T extends (infer U)[] ? U :
  T extends (...args: any[]) => infer U ? U :
  T extends Promise<infer U> ? U :
  T;

=====================================output=====================================
// @flow

type TestReturnType<T extends (...args: any[]) => any> = T extends (
  ...args: any[]
) => infer R
  ? R
  : any;

type Unpacked<T> = T extends (infer U)[]
  ? U
  : T extends (...args: any[]) => infer U
    ? U
    : T extends Promise<infer U>
      ? U
      : T;

================================================================================
`;

exports[`nested-in-condition.js [babel-flow] format 1`] = `
"Unexpected token, expected ")" (4:26)
  2 |
  3 | type Foo =
> 4 |   (ThingamabobberFactory extends AbstractThingamabobberFactory ? GobbledygookProvider : CompositeGobbledygookProvider) extends
    |                          ^
  5 |   DoubleGobbledygookProvider
  6 |     ? UniqueDalgametreService
  7 |     : CompositeZamazingoResolver;
Cause: Unexpected token, expected ")" (4:25)"
`;

exports[`nested-in-condition.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

type Foo =
  (ThingamabobberFactory extends AbstractThingamabobberFactory ? GobbledygookProvider : CompositeGobbledygookProvider) extends
  DoubleGobbledygookProvider
    ? UniqueDalgametreService
    : CompositeZamazingoResolver;

type Foo2 =
  DoubleGobbledygookProvider extends
  (ThingamabobberFactory extends AbstractThingamabobberFactory ? GobbledygookProvider : CompositeGobbledygookProvider)
    ? UniqueDalgametreService
    : CompositeZamazingoResolver;

type Foo3 =
  (ThingamabobberFactory extends AbstractThingamabobberFactory ? GobbledygookProvider : CompositeGobbledygookProvider) extends
  (DoubleGobbledygookProvider extends MockGobbledygookProvider ? MockThingamabobberFactory : ThingamabobberFactory)
    ? UniqueDalgametreService
    : CompositeZamazingoResolver;

=====================================output=====================================
// @flow

type Foo = (
  ThingamabobberFactory extends AbstractThingamabobberFactory
    ? GobbledygookProvider
    : CompositeGobbledygookProvider
) extends DoubleGobbledygookProvider
  ? UniqueDalgametreService
  : CompositeZamazingoResolver;

type Foo2 = DoubleGobbledygookProvider extends (
  ThingamabobberFactory extends AbstractThingamabobberFactory
    ? GobbledygookProvider
    : CompositeGobbledygookProvider
)
  ? UniqueDalgametreService
  : CompositeZamazingoResolver;

type Foo3 = (
  ThingamabobberFactory extends AbstractThingamabobberFactory
    ? GobbledygookProvider
    : CompositeGobbledygookProvider
) extends (
  DoubleGobbledygookProvider extends MockGobbledygookProvider
    ? MockThingamabobberFactory
    : ThingamabobberFactory
)
  ? UniqueDalgametreService
  : CompositeZamazingoResolver;

================================================================================
`;

exports[`new-ternary-spec.js [babel-flow] format 1`] = `
"Unexpected token (5:5)
  3 | // TypeScript examples:
  4 | type TypeName<T> =
> 5 |   T extends string ? "string"
    |     ^
  6 |   : T extends number ? "number"
  7 |   : T extends boolean ? "boolean"
  8 |   : T extends undefined ? "undefined"
Cause: Unexpected token (5:4)"
`;

exports[`new-ternary-spec.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

// TypeScript examples:
type TypeName<T> =
  T extends string ? "string"
  : T extends number ? "number"
  : T extends boolean ? "boolean"
  : T extends undefined ? "undefined"
  : T extends Function ? "function"
  : "object";

type Unpacked<T> =
  T extends (infer U)[] ? U
  : T extends (...args: any[]) => infer U ?
    SomeReallyLongThingThatBreaksTheLine<U>
  : T extends Promise<infer U> ? U
  : T;

=====================================output=====================================
// @flow

// TypeScript examples:
type TypeName<T> = T extends string
  ? "string"
  : T extends number
    ? "number"
    : T extends boolean
      ? "boolean"
      : T extends undefined
        ? "undefined"
        : T extends Function
          ? "function"
          : "object";

type Unpacked<T> = T extends (infer U)[]
  ? U
  : T extends (...args: any[]) => infer U
    ? SomeReallyLongThingThatBreaksTheLine<U>
    : T extends Promise<infer U>
      ? U
      : T;

================================================================================
`;

exports[`parentheses.js [babel-flow] format 1`] = `
"Unexpected token (4:17)
  2 |
  3 | // #13275
> 4 | type Foo<T> = T extends ((...a: any[]) => infer R extends string) ? R : never;
    |                 ^
  5 |
Cause: Unexpected token (4:16)"
`;

exports[`parentheses.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

// #13275
type Foo<T> = T extends ((...a: any[]) => infer R extends string) ? R : never;

=====================================output=====================================
// @flow

// #13275
type Foo<T> = T extends ((...a: any[]) => infer R extends string) ? R : never;

================================================================================
`;
